data/derived/comb/progs/unify/prog1826.ml.out
Characters 28-48:
  let fixpoint (f,b) = wwhile ( f, (f b) = b , b );;
                              ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
